--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "musicmetadata": "^2.0.5",
     "ndjson": "^1.5.0",
     "pump": "^1.0.2",
+    "pumpify": "^1.3.5",
+    "through2": "^2.0.3",
     "through2-filter": "^2.0.0",
-    "through2-spy": "^2.0.0"
+    "through2-spy": "^2.0.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "standard": "^8.6.0"
