--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   },
   "homepage": "https://github.com/hypermodules/music-library#readme",
   "dependencies": {
+    "byte-stream": "^2.1.0",
+    "concurrent-writable": "^1.0.4",
     "flush-write-stream": "^1.0.2",
     "folder-walker": "^3.0.0",
     "level": "^1.5.0",
+    "level-batch-stream": "^1.3.1",
     "musicmetadata": "^2.0.5",
     "ndjson": "^1.5.0",
     "pump": "^1.0.2",
     "pumpify": "^1.3.5",
     "through2": "^2.0.3",
     "through2-filter": "^2.0.0",
+    "through2-map": "^3.0.0",
     "through2-spy": "^2.0.0",
     "xtend": "^4.0.1"
   },
