--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Music library experiments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,18 @@
   "homepage": "https://github.com/hypermodules/music-library#readme",
   "dependencies": {
     "byte-stream": "^2.1.0",
+    "bytewise": "^1.1.0",
     "concurrent-writable": "^1.0.4",
     "flush-write-stream": "^1.0.2",
     "folder-walker": "^3.0.0",
     "level": "^1.5.0",
     "level-batch-stream": "^1.3.1",
+    "level-model": "^2.0.4",
     "musicmetadata": "^2.0.5",
     "ndjson": "^1.5.0",
     "pump": "^1.0.2",
     "pumpify": "^1.3.5",
+    "subleveldown": "^2.1.0",
     "through2": "^2.0.3",
     "through2-filter": "^2.0.0",
     "through2-map": "^3.0.0",
