--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "folder-walker": "^3.0.0",
     "level": "^1.5.0",
     "level-batch-stream": "^1.3.1",
+    "level-indexer": "^2.0.0",
     "level-model": "^2.0.4",
+    "level-secondary": "bcomnes/level-secondary.git#remove-sublevel",
     "musicmetadata": "^2.0.5",
     "ndjson": "^1.5.0",
     "pump": "^1.0.2",
