--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Music library experiments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "run-s test:*",
+    "test:deps": "dependency-check ./package.json",
+    "test:lint": "standard | snazzy",
+    "test:tape": "tape test/* | tap-format-spec"
   },
   "repository": {
     "type": "git",
@@ -25,21 +27,21 @@
     "folder-walker": "^3.0.0",
     "level": "^1.5.0",
     "level-batch-stream": "^1.3.1",
-    "level-indexer": "^2.0.0",
-    "level-model": "^2.0.4",
-    "level-secondary": "bcomnes/level-secondary.git#remove-sublevel",
+    "level-idx": "^1.0.0",
     "musicmetadata": "^2.0.5",
-    "ndjson": "^1.5.0",
     "pump": "^1.0.2",
-    "pumpify": "^1.3.5",
     "subleveldown": "^2.1.0",
     "through2": "^2.0.3",
     "through2-filter": "^2.0.0",
     "through2-map": "^3.0.0",
-    "through2-spy": "^2.0.0",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
-    "standard": "^8.6.0"
+    "@tap-format/spec": "^0.2.0",
+    "dependency-check": "^2.7.0",
+    "npm-run-all": "^4.0.0",
+    "snazzy": "^6.0.0",
+    "standard": "^8.6.0",
+    "tape": "^4.6.3"
   }
 }
