--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "level-batch-stream": "^1.3.1",
     "level-idx": "^1.0.0",
     "musicmetadata": "^2.0.5",
+    "parallel-transform": "^1.1.0",
     "pump": "^1.0.2",
     "subleveldown": "^2.1.0",
     "through2": "^2.0.3",
